--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,12 @@
   width: 250px;
   border-radius: 8px;
 }
+
+.maple-container {
+  width: 100px;
+  border-radius: 8px;
+}
+
+.footer {
+  height: 10px;
+}
